refactor(*): 🛠️ 修复了多处Bug，微调了一些地方，加入路由切换动画等

--- a/components/menu.cpt.html
+++ b/components/menu.cpt.html
@@ -33,7 +33,7 @@
                     <path fill-rule="evenodd"
                           d="M3.214 1.072C4.813.752 6.916.71 8.354 2.146A.5.5 0 0 1 8.5 2.5v11a.5.5 0 0 1-.854.354c-.843-.844-2.115-1.059-3.47-.92-1.344.14-2.66.617-3.452 1.013A.5.5 0 0 1 0 13.5v-11a.5.5 0 0 1 .276-.447L.5 2.5l-.224-.447.002-.001.004-.002.013-.006a5.017 5.017 0 0 1 .22-.103 12.958 12.958 0 0 1 2.7-.869z"></path>
                 </svg>
-                <span class="menu-text">阅读帮助文档 Help</span>
+                <span class="menu-text">帮助文档 Help</span>
             </a>
         </li>
 
@@ -52,6 +52,7 @@
 
         <li class="side-follow">
             <a href="mailto://eternalchampion617@gmail.com" class="menu-option">E-mail</a>
-            <a href="https://github.com/Scholar-Jr/" class="menu-option">Github</a></li>
+            <a href="https://github.com/Scholar-Jr/" class="menu-option">Github</a>
+        </li>
     </ul>
 </div>
