--- a/templates/help.tpl.html
+++ b/templates/help.tpl.html
@@ -1,9 +1,9 @@
 <div class="help">
     <h2>帮助文档</h2>
     <div class="help-content">
-        本网站不具备个人资料采集功能，只在双方之情情况下提供数据存档作用。要在本网站中存入您的表白，只需要在左边的导航栏中选择<b>新建表白</b>并填写要求的项目提交即可。
+        Shape of Love表白系统不具备个人资料采集功能，只在双方之情的情况下提供数据存档作用。如您需要在本表白系统中存入您的表白，只需要在导航栏中选择<b>新建表白</b>项，并在新建表白页面中填写要求的项目并提交即可。
         <br><br>
-        请您注意，在您提交完成之后，数据将不会审核或告知被表白方，您在本网站所做的任何行为都将被视为维护<b>Shape Of Love</b>。本网站的<b title="Hugesea Team">维护团队</b>将会不定期对网站进行违规内容检测，如果检测到您提交了违规的内容，那么这项存档会在您不知情的情况下删除。
+        请注意，在提交完成之后，数据将不会审核或告知被表白方，您在本网站所做的任何行为都将被视为维护<b>Shape Of Love</b>。本网站的<b title="Hugesea Team">维护团队</b>将会不定期对网站进行违规内容检测，如果检测到您提交了违规的内容，那么这项存档会在您不知情的情况下删除。
         <br><br>
         本网站所收集的信息与作用公开如下。
         <br><br>
