feat: 🛠️ 删除了没有用的文件，修复了数个bug，整理了用户界面

--- a/components/intro.cpt.html
+++ b/components/intro.cpt.html
@@ -1,3 +1,1 @@
-<div class="intro">
-    Shape of Love 是一个现代化表白网系统，由 Hugesea Team 编写并维护。我们的目标是建立一个有着优质生态的表白网。
-</div>
+<div class="intro">以爱之名，书写下我们爱的故事。</div>
