--- a/templates/create.tpl.html
+++ b/templates/create.tpl.html
@@ -1,5 +1,5 @@
 <div class="create">
-    <h2>将你的表白添加到我们的网站存档</h2>
+    <h2>添加您的表白到我们的网站归档</h2>
     <div class="create-form">
         <form id="data-form" action="./functions/submitConfession.php" method="post">
             <section class="form-container container">
@@ -14,7 +14,7 @@
                 </main>
             </section>
 
-            <main class="main content">
+            <main class="main form-content">
                 <h4>在这里输入你想对对方说的话</h4>
                 <textarea class="input-content" id="input-content"></textarea>
                 <br>
@@ -29,106 +29,3 @@
         </form>
     </div>
 </div>
-
-<style>
-    .create {
-        line-height: 1.5;
-    }
-
-    .form-container {
-        padding: 0;
-    }
-
-    .form-sender, .form-recipient, .form-content {
-        border: #ddd dashed 1px;
-        line-height: 1.5;
-        margin-top: 10px;
-	    box-sizing: border-box
-    }
-
-    .form-sender {
-        margin-right: 5px;
-    }
-
-    .form-recipient {
-        margin-left: 5px;
-    }
-
-    .input-sender, .input-recipient {
-        border-radius: 0;
-        -webkit-appearance: none;
-        background-color: #fff;
-        border: 1px solid  #DCDFE6;
-        box-sizing: border-box;
-        color: #606266;
-        display: inline-block;
-        font-size: .8rem;
-        height: 40px;
-        line-height: 40px;
-        padding: 0 15px;
-        transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
-        width: 100%;;
-    }
-
-    .form-submitButton {
-        color: #fff;
-        background-color: #f60c3e;
-        border-radius: 0;
-        transition: all .5s;
-        width: 40%;
-        display: inline-block;
-        line-height: 1;
-        white-space: nowrap;
-        cursor: pointer;
-        -webkit-appearance: none;
-        text-align: center;
-        box-sizing: border-box;
-        outline: 0;
-        margin: 0;
-        font-weight: 500;
-        padding: 12px 20px;
-        font-size: 14px;
-        border: 1px #f60c3e;
-    }
-
-    .form-submitButton:hover {
-        box-shadow: #333333 0 0 3px;
-        transition: all .5s;
-    }
-
-    .notice {
-        color: #bbb;
-        font-size: .8rem;
-        margin-top: 10px;
-    }
-
-    .content {
-        border: #ddd dashed 1px;
-        margin-top: 10px;
-        line-height: 1.5;
-    }
-
-    .input-content {
-        min-height: 222px;
-        height: 222px;
-        margin-top: 0;
-        margin-bottom: 0;
-        width: 100%;
-        border: #ddd solid 1px;
-        display: block;
-        resize: vertical;
-        padding: 5px 15px;
-        line-height: 1.5;
-        box-sizing: border-box;
-        font-size: .8rem;
-        color: #606266;
-        background-color: #FFF;
-        transition: border-color .2s cubic-bezier(.645,.045,.355,1);
-        border-radius: 0;
-    }
-
-    .input-sender:focus, .input-recipient:focus, .input-content:focus {
-        border-color: #f60c3e;
-        outline: 0;
-    }
-</style>
