--- a/templates/help.tpl.html
+++ b/templates/help.tpl.html
@@ -1,66 +1,14 @@
 <div class="help">
-    <h2>帮助文档</h2>
+    <h2 class="help-title">帮助文档</h2>
     <div class="help-content">
-        Shape of Love表白系统不具备个人资料采集功能，只在双方之情的情况下提供数据存档作用。如您需要在本表白系统中存入您的表白，只需要在导航栏中选择<b>新建表白</b>项，并在新建表白页面中填写要求的项目并提交即可。
+        本表白网系统不具备任何数据采集功能，在使用本系统的过程中，您无需担心您的个人隐私被泄漏。本系统只提供单一数据存储功能。
         <br><br>
-        请注意，在提交完成之后，数据将不会审核或告知被表白方，您在本网站所做的任何行为都将被视为维护<b>Shape Of Love</b>。本网站的<b title="Hugesea Team">维护团队</b>将会不定期对网站进行违规内容检测，如果检测到您提交了违规的内容，那么这项存档会在您不知情的情况下删除。
+        如果您需要在本表白系统中提交任何表白，仅需要单击左侧菜单中的新建表白功能，输入相关信息即可。
         <br><br>
-        本网站所收集的信息与作用公开如下。
+        在程序开发期间，网站可能随时关闭，如果在本系统上有关于您的重要数据，请注意及时备份，避免因为网站系统更新而造成不可逆的损失。
         <br><br>
-        <table class="help-table">
-            <thead>
-                <th>收集的数据</th>
-                <th>作用</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>昵称</td>
-                    <td>在存档页面展示，用于信息区别。</td>
-                </tr>
-
-                <tr>
-                    <td>提交的内容</td>
-                    <td>您在此处存入的内容，展示于存档页面。</td>
-                </tr>
-
-                <tr>
-                    <td>提交的时间</td>
-                    <td>在存档页面中展示,作用与昵称一样。</td>
-                </tr>
-            </tbody>
-        </table>
+        本网站目前处于开发过程中，系统并不完善，目前针对Google Chrome浏览器进行开发，如果您使用的是其它内核的浏览器，网站系统的运行可能往往会伴随着漏洞。
         <br><br>
-        如果您觉得网站目前提交的功能由缺陷或者是对您的某些方面造成了损失，请您在联系我们栏目中给我们发送E-mail。
-        <br><br>
-        任凭时光流走，爱永不停息。
+        要获取本网站系统的源代码并且加入到本网站的维护行列之中，请在<a href="https://github.com/Scholar-Jr/sols.git">Scholar-Jr/Sols</a>项目中了解详细。
     </div>
 </div>
-
-<style>
-    .help {
-        line-height: 1.5;
-    }
-
-    .help-content {
-        font-size: .8rem;
-        text-align: left;
-    }
-
-    .help-table {
-	width: 100%;
-        border-collapse: collapse;
-    }
-
-    .help-table th {
-        color: #fff;
-        background-color: #f50c3e;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-
-    .help-table td {
-        border-left: 1px dashed #777;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-</style>
