--- a/components/menu.cpt.html
+++ b/components/menu.cpt.html
@@ -1,6 +1,6 @@
 <div class="menu">
     <ul>
-        <li>
+        <li class="menu-switcher">
             <a href="#!/" class="menu-option">
                 <svg viewBox="0 0 20 20" fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg" class="bi bi-house-fill menu-icon">
@@ -9,11 +9,11 @@
                     <path fill-rule="evenodd"
                           d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"></path>
                 </svg>
-                <span class="menu-text">表白存档 Archives</span>
+                <span class="menu-text">表白归档 Archives</span>
             </a>
         </li>
 
-        <li>
+        <li class="menu-switcher">
             <a href="#!/create" class="menu-option">
                 <svg viewBox="0 0 20 20" fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg" class="bi bi-cloud-plus-fill menu-icon">
@@ -24,7 +24,17 @@
             </a>
         </li>
 
-        <li>
+        <li class="menu-switcher">
+            <a href="#!manage" class="menu-option">
+                <svg viewBox="0 0 20 20" fill="currentColor"
+                 xmlns="http://www.w3.org/2000/svg" class="bi bi-gear-fill menu-icon">
+                    <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+                </svg>
+                <span class="menu-text">管理表白 Manage</span>
+            </a>
+        </li>
+
+        <li class="menu-switcher">
             <a href="#!/help" class="menu-option">
                 <svg viewBox="0 0 20 20" fill="currentColor"
                      xmlns="http://www.w3.org/2000/svg" class="bi bi-book-half menu-icon">
@@ -38,20 +48,12 @@
         </li>
 
         <li class="menu-label">
-            <span>友情连接</span>
+            <span>友情连接 & 联系我们</span>
         </li>
 
         <li class="side-follow">
-            <a href="https://hugesea.online" class="menu-option">Scholar Jr 的博客</a>
-            <a href="https://www.bibiu.cc" class="menu-option">Hello Bi~biu</a>
-        </li>
-
-        <li class="menu-label">
-            <span>联系我们</span>
-        </li>
-
-        <li class="side-follow">
-            <a href="mailto://eternalchampion617@gmail.com" class="menu-option">E-mail</a>
+            <a href="https://hugesea.online" class="menu-option">Scholar Jr的博客</a>
+            <a href="mailto://scholar7r@gmail.com" class="menu-option">E-mail</a>
             <a href="https://github.com/Scholar-Jr/" class="menu-option">Github</a>
         </li>
     </ul>
