--- a/styles/base.css
+++ b/styles/base.css
@@ -1,16 +1,16 @@
-* { font-family: var(--default-font-family); }
+* { font-family: 'Myriad Pro', 'PingFang SC', 'Microsoft YaHei', Arial, sans-serif; }
 
 ::selection {
-    color: var(--extra-color);
-    background-color: var(--primary-color);
+    color: #ffffff;
+    background-color: #f60c3e;
 }
 
-.aside::-webkit-scrollbar, .main::-webkit-scrollbar { width: var(--zero); }
+.aside::-webkit-scrollbar, .main::-webkit-scrollbar { width: 0; }
 
 html, body {
-    padding: var(--zero);
-    margin: var(--zero);
-    height: var(--max);
+    padding: 0;
+    margin: 0;
+    height: 100%;
     scroll-behavior: smooth;
     overflow: hidden;
 }
